alignment correction

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     background-color: hsl(217, 19%, 24%);
     padding: 20px;
     border-radius: 10px;
+    
 }
 
 
@@ -54,6 +55,8 @@ body{
     margin-top: 10px;
     margin-bottom: 30px ;
     font-size: 20px;
+    text-align: center;
+    border: 1px solid hsl(150, 100%, 66%);
 }
 
 @media (max-width: 330px) {
